# zig-syrup

./: .gitignore  AGENTS.md  ANALYSIS_AND_NEXT_STEPS.md  BCI-ECOSYSTEM-LIFTING.md  BCI_CONTAINER_README.md  BENCHMARK-RESULTS.md  BENCHMARK_OPENGAME.md  BRUHAT_TITS_COLOR_SPACE.md  CAPTP-OPTIMIZATIONS.md  CATEGORY_THEORY_TILES.md  COLORED-PARENS-DEMO.md  Containerfile.bci-processor  DOCUMENTATION_GAPS.md  HYPERREAL_COLOR_THEORY.md  INTERCHANGE-COMPARISON.md  LICENSE  NUWORLDS_SUMMARY.md  PIVOT_GUIDE.md  README.md  SMART-ENERGY-INTERFACES.md  SYRUP-IMPLEMENTATIONS-VERIFIED.md  ZIG-SYRUP-FULL-PARITY.md  ZIG_SYRUP_STATUS.md  build.zig  build_apple_container.sh  build_eeg.zig  collaborators_and_hues.md  colored_demo  container_receiver.py  debug_olc.zig  demo_rainbow.zig  requirements-container.txt  run_apple_container.sh  start_processor.sh  stellogen  test_ghostty_ix_integration.zig
.ruler/: instructions.md  ruler.toml  trifurcation-enforcer.cljs
bci_orchestrator/: DELIVERABLES.md  README.md  __init__.py  bci_orchestrator.py  hypergraph_config.yaml  hypergraph_orchestrator.py  monitor.py  phase_coordinator.py  requirements.txt  stream_router.py
benchmark/: bench_bb.clj  bench_bun.mjs  bench_node.mjs  bench_python.py  bench_zig.zig  run_all.sh
benchmarks/: bandwidth_benchmark.zig  bandwidth_simple.zig  bench_cell_sync.zig  bench_zig.zig  parity_check.zig
benchmarks/rust_parity/: Cargo.toml
benchmarks/rust_parity/src/: de.rs  format.rs  lib.rs  ser.rs
circuits/: simple_logic.txt
docs/: DUCKDB_DATASHEET.md  MODEL_INVENTORY.md  duckdb_dataset_scope.txt  (+1 more)
skills/: c  (+395 more)
(+640 files in other folders)
