[package]
name = "ocapn-syrup"
version = "0.1.4"
edition = "2021"
authors = ["Casey Marshall <crates@cmars.tech>"]
description = "Syrup is a lightweight and easy-to-implement data serialization format."
documentation = "https://docs.rs/ocapn-syrup"
readme = "README.md"
repository = "https://github.com/cmars/ocapn-syrup"
license = "MPL-2.0"

[dependencies]
nom = "7"
num-bigint = "0.4.6"
serde = { version = "1.0.217", features = ["derive"] }
